--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 	<title>Pollution Tracker</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-
+	<link href="https://fonts.googleapis.com/css?family=Comic+Neue|Special+Elite&display=swap" rel="stylesheet">
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/css/bundle.css'>
